--- a/KnightNews/JJVPreviewViewController.xib
+++ b/KnightNews/JJVPreviewViewController.xib
@@ -19,51 +19,51 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uij-7r-2oC">
-                    <rect key="frame" x="20" y="46" width="280" height="203"/>
+                    <rect key="frame" x="0.0" y="64" width="320" height="204"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="203" id="fUM-Oi-Q9R"/>
+                        <constraint firstAttribute="height" constant="204" id="fUM-Oi-Q9R"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="320" translatesAutoresizingMaskIntoConstraints="NO" id="kGT-1I-jiv">
-                    <rect key="frame" x="0.0" y="250" width="320" height="47"/>
+                    <rect key="frame" x="0.0" y="269" width="320" height="47"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="47" id="xIf-gk-8Pa"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQg-1t-L1P">
-                    <rect key="frame" x="0.0" y="298" width="320" height="15"/>
+                    <rect key="frame" x="0.0" y="317" width="320" height="15"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Excerpt" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="wOn-Ul-p7b">
-                    <rect key="frame" x="20" y="314" width="280" height="254"/>
+                    <rect key="frame" x="20" y="333" width="280" height="185"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="kGT-1I-jiv" secondAttribute="trailing" id="1Z4-bu-Tn0"/>
-                <constraint firstItem="Uij-7r-2oC" firstAttribute="top" secondItem="Bvx-Kn-DPB" secondAttribute="top" constant="46" id="46Q-aF-zjO"/>
+                <constraint firstItem="Uij-7r-2oC" firstAttribute="top" secondItem="Bvx-Kn-DPB" secondAttribute="top" constant="64" id="46Q-aF-zjO"/>
                 <constraint firstItem="kGT-1I-jiv" firstAttribute="top" secondItem="Uij-7r-2oC" secondAttribute="bottom" constant="1" id="59y-BV-ouY"/>
                 <constraint firstAttribute="trailing" secondItem="wOn-Ul-p7b" secondAttribute="trailing" constant="20" id="8uK-jO-z4t"/>
                 <constraint firstItem="wOn-Ul-p7b" firstAttribute="leading" secondItem="Bvx-Kn-DPB" secondAttribute="leading" constant="20" id="CAS-gm-x6E"/>
                 <constraint firstItem="hQg-1t-L1P" firstAttribute="top" secondItem="kGT-1I-jiv" secondAttribute="bottom" constant="1" id="Fju-rw-bgi"/>
                 <constraint firstItem="kGT-1I-jiv" firstAttribute="leading" secondItem="Bvx-Kn-DPB" secondAttribute="leading" id="Ndi-NY-70N"/>
                 <constraint firstItem="hQg-1t-L1P" firstAttribute="leading" secondItem="Bvx-Kn-DPB" secondAttribute="leading" id="PMC-QK-BGj"/>
-                <constraint firstItem="Uij-7r-2oC" firstAttribute="leading" secondItem="Bvx-Kn-DPB" secondAttribute="leading" constant="20" id="dwn-Bg-hch"/>
+                <constraint firstItem="Uij-7r-2oC" firstAttribute="leading" secondItem="Bvx-Kn-DPB" secondAttribute="leading" id="dwn-Bg-hch"/>
                 <constraint firstItem="wOn-Ul-p7b" firstAttribute="top" secondItem="hQg-1t-L1P" secondAttribute="bottom" constant="1" id="n1u-1y-bLj"/>
                 <constraint firstAttribute="trailing" secondItem="hQg-1t-L1P" secondAttribute="trailing" id="rmT-cF-ZhC"/>
-                <constraint firstAttribute="trailing" secondItem="Uij-7r-2oC" secondAttribute="trailing" constant="20" id="sVW-WQ-9hX"/>
-                <constraint firstAttribute="bottom" secondItem="wOn-Ul-p7b" secondAttribute="bottom" id="zQh-bL-BnZ"/>
+                <constraint firstAttribute="trailing" secondItem="Uij-7r-2oC" secondAttribute="trailing" id="sVW-WQ-9hX"/>
+                <constraint firstAttribute="bottom" secondItem="wOn-Ul-p7b" secondAttribute="bottom" constant="50" id="zQh-bL-BnZ"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
