--- a/KnightNews/JJVPreviewViewController_iPad.xib
+++ b/KnightNews/JJVPreviewViewController_iPad.xib
@@ -21,7 +21,7 @@
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Excerpt" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdf-1d-Dj9">
                     <rect key="frame" x="20" y="640" width="728" height="384"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -40,12 +40,12 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="ReF-qC-3sK"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t7b-57-hur">
-                    <rect key="frame" x="20" y="73" width="728" height="465"/>
+                    <rect key="frame" x="0.0" y="64" width="768" height="465"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="465" id="QPz-gJ-k3j"/>
@@ -54,19 +54,19 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="t7b-57-hur" firstAttribute="top" secondItem="Qb3-gH-kZm" secondAttribute="top" constant="73" id="2Cg-mz-Q9n"/>
+                <constraint firstItem="t7b-57-hur" firstAttribute="top" secondItem="Qb3-gH-kZm" secondAttribute="top" constant="64" id="2Cg-mz-Q9n"/>
                 <constraint firstAttribute="trailing" secondItem="LWU-9d-9iA" secondAttribute="trailing" constant="20" id="3PE-fX-pcq"/>
                 <constraint firstItem="0r0-Eu-Em5" firstAttribute="leading" secondItem="Qb3-gH-kZm" secondAttribute="leading" constant="20" id="9Aa-1N-dfC"/>
                 <constraint firstItem="LWU-9d-9iA" firstAttribute="leading" secondItem="Qb3-gH-kZm" secondAttribute="leading" constant="20" id="9Ap-k7-Fr9"/>
                 <constraint firstAttribute="bottom" secondItem="gdf-1d-Dj9" secondAttribute="bottom" id="9CG-SK-Gyt"/>
                 <constraint firstAttribute="trailing" secondItem="gdf-1d-Dj9" secondAttribute="trailing" constant="20" id="M6t-BB-iCL"/>
-                <constraint firstAttribute="trailing" secondItem="t7b-57-hur" secondAttribute="trailing" constant="20" id="Omo-r3-jlO"/>
+                <constraint firstAttribute="trailing" secondItem="t7b-57-hur" secondAttribute="trailing" id="Omo-r3-jlO"/>
                 <constraint firstItem="0r0-Eu-Em5" firstAttribute="top" secondItem="LWU-9d-9iA" secondAttribute="bottom" constant="2" id="Tac-eJ-RRp"/>
                 <constraint firstItem="gdf-1d-Dj9" firstAttribute="top" secondItem="0r0-Eu-Em5" secondAttribute="bottom" constant="8" id="bEQ-Jh-kHS"/>
                 <constraint firstItem="gdf-1d-Dj9" firstAttribute="leading" secondItem="Qb3-gH-kZm" secondAttribute="leading" constant="20" id="k25-kp-qw9"/>
-                <constraint firstItem="t7b-57-hur" firstAttribute="leading" secondItem="Qb3-gH-kZm" secondAttribute="leading" constant="20" id="kzg-GY-yKr"/>
+                <constraint firstItem="t7b-57-hur" firstAttribute="leading" secondItem="Qb3-gH-kZm" secondAttribute="leading" id="kzg-GY-yKr"/>
                 <constraint firstAttribute="trailing" secondItem="0r0-Eu-Em5" secondAttribute="trailing" constant="20" id="wal-yW-LQC"/>
-                <constraint firstItem="LWU-9d-9iA" firstAttribute="top" secondItem="t7b-57-hur" secondAttribute="bottom" constant="-17" id="ydO-gq-eoO"/>
+                <constraint firstItem="LWU-9d-9iA" firstAttribute="top" secondItem="t7b-57-hur" secondAttribute="bottom" constant="-8" id="ydO-gq-eoO"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
