--- a/KnightNews/KKNewsFeaturedTableViewCell.xib
+++ b/KnightNews/KKNewsFeaturedTableViewCell.xib
@@ -43,6 +43,13 @@
                 </subviews>
                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="articleAuthorLabel" destination="aMH-m2-dJf" id="WOF-8D-qj6"/>
+                <outlet property="articleImageView" destination="1hi-HH-oSW" id="cxp-l0-lee"/>
+                <outlet property="articlePreviewTextView" destination="xYf-0y-15f" id="pUR-a3-u5b"/>
+                <outlet property="articleTimeLabel" destination="Itj-ss-SHq" id="UEz-jx-Bed"/>
+                <outlet property="articleTitle" destination="VQP-48-Fb8" id="fGE-Aq-Q4i"/>
+            </connections>
             <point key="canvasLocation" x="245" y="302"/>
         </tableViewCell>
     </objects>
